# visual_stabilization

./: README.md  dependencies.yaml
docs/: code.md  installation.md
visual_stabilization/: CMakeLists.txt  package.xml
visual_stabilization/config/: ecd_dataset_mocap.yaml  mvsec_indoor_flying.yaml  vector_davis.yaml  vector_image.yaml
visual_stabilization/include/visual_stabilization/: camera_calibration.hpp  camera_rotation_stabilizer.hpp  d_event.hpp  event_stabilization.hpp  event_windowing.hpp  frame_stabilization.hpp  vision_stabilizer.hpp
visual_stabilization/launch/: event_stabilization.launch  frame_stabilization.launch
visual_stabilization/rqt/: visual_stabilization_events.perspective  visual_stabilization_frames.perspective
visual_stabilization/src/: camera_calibration.cpp  camera_rotation_stabilizer.cpp  d_event.cpp  event_stabilization.cpp  event_windowing.cpp  frame_stabilization.cpp  vision_stabilizer.cpp
