<?xml version="1.0"?>
<package format="2">
  <name>visual_stabilization</name>
  <version>1.0.0</version>
  <description>The visual_stabilization package</description>

  <maintainer email="jrodriguez@us.es">Juan Pablo Rodriguez Gomez</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>std_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>

  <export>  </export>
</package>
